k8s deployments/ingress-stable.yaml
# Ingress para la aplicación principal
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-stable
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp-stable
            port:
              number: 80
